--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@tanstack/react-table": "^8.13.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
